# graduation_research_scraping

./: .gitignore  pyproject.toml
src/: count_folder.py  get_item_links.py  infinite_scroll.py  main.py
