[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["yuu <yusei8171@gmail.com>"]
readme = "README.md"
packages = [{include = "scraping", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
selenium = "^4.9.1"
chromedriver-binary = "^114.0.5735.16.0"
webdriver-manager = "^3.8.6"
pandas = "^2.0.1"
ulid-py = "^1.1.0"
demoji = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
