[tool.poetry]
name = "scraping"
version = "0.1.0"
description = ""
authors = ["yuu <yusei8171@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.5"
beautifulsoup4 = "^4.12.2"
selenium = "^4.9.1"
chromedriver-binary = "^114.0.5735.16.0"
webdriver-manager = "^4.0.0"
pandas = "^2.0.1"
ulid-py = "^1.1.0"
demoji = "^1.1.0"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
